force-app/main/default/objects/SC_Gemini_Settings__c/SC_Gemini_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SC Gemini Settings</label>
</CustomObject>