force-app/main/default/objects/SC_Gemini_Settings__c/fields/Email_Template_Body_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Body_Parameter__c</fullName>
    <label>Email Template Body Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>