force-app/main/default/objects/SC_Gemini_Settings__c/fields/Gemini_Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Email_Template_Developer_Name__c</fullName>
    <label>Gemini Email Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>