force-app/main/default/objects/SC_Gemini_Settings__c/fields/Update_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Update_Recipient_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Recipient Name</label>
    <type>Checkbox</type>
</CustomField>